# Bank_processing_agent_public

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/: README.md
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/.runtime/test-uploads/7cbc1ca2ed5a4e2bb07c5d0a6543bba0/cases/e9278219-934a-4e5b-8188-85fe6251c6dc/documents/65c9c899-161b-4fa5-bd29-d2620b830ac2/: bank_statement.txt
apps/backend/alembic/: README.md  env.py
apps/backend/alembic/versions/: 20260415_0001_initial_backend_schema.py  20260416_0002_align_locked_app_schema.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: dependencies.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: audit.py  cases.py  decisions.py  documents.py  health.py  manual_review.py  processing.py
apps/backend/app/audit/: __init__.py  logger.py
apps/backend/app/core/: config.py  exceptions.py  logging.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/models/: __init__.py  audit_event.py  case.py  decision.py  document.py  enums.py  findings.py  manual_review.py  user.py
apps/backend/app/pipelines/: __init__.py  llm_extraction.py
apps/backend/app/providers/: __init__.py  base.py  gpt_extraction.py  placeholder.py
apps/backend/app/repositories/: audit.py  cases.py  decisions.py  documents.py  manual_review.py
apps/backend/app/schemas/: __init__.py  audit.py  cases.py  common.py  decisions.py  documents.py  manual_review.py  processing.py
apps/backend/app/security/: __init__.py  rbac.py
apps/backend/app/services/: audit.py  cases.py  decisions.py  documents.py  manual_review.py  processing.py
apps/backend/app/tasks/: celery_app.py  processing.py
apps/backend/app/tests/: conftest.py  test_case_service.py  test_case_workflow.py  test_rbac.py  test_root_endpoint.py
apps/backend/app/workflows/: case_state.py
apps/backend/src/ops_agent/: __init__.py  app.py  config.py  main.py
apps/backend/src/ops_agent/api/: __init__.py  dependencies.py  error_handlers.py  openapi.py  router.py  schemas.py
apps/backend/src/ops_agent/api/routes/: audit.py  cases.py  decisions.py  document_extraction.py  documents.py  health.py  manual_review.py  processing.py
apps/backend/src/ops_agent/application/services/: __init__.py  audit.py  case_management.py  case_processing.py  case_workflow.py  decision.py  document_access.py  document_upload.py  manual_review.py  system_health.py  upload_validation.py
apps/backend/src/ops_agent/domain/audit/: __init__.py  entities.py
apps/backend/src/ops_agent/domain/cases/: __init__.py  entities.py
apps/backend/src/ops_agent/domain/documents/: __init__.py  entities.py
apps/backend/src/ops_agent/domain/review/: __init__.py  entities.py
apps/backend/src/ops_agent/domain/shared/: __init__.py  enums.py  evidence.py  exceptions.py
apps/backend/src/ops_agent/domain/workflow/: __init__.py  state_machine.py
apps/backend/src/ops_agent/infrastructure/db/: __init__.py  base.py  session.py
apps/backend/src/ops_agent/infrastructure/db/models/: __init__.py  audit.py  base.py  case.py  document.py  findings.py  healthcheck.py  identity.py  review.py
apps/backend/src/ops_agent/infrastructure/db/repositories/: __init__.py  audit_repository.py  case_repository.py  decision_repository.py  document_repository.py  manual_review_repository.py  processing_repository.py
apps/backend/src/ops_agent/infrastructure/logging/: setup.py
apps/backend/src/ops_agent/infrastructure/providers/: README.md  __init__.py  interfaces.py  openai_extraction.py  placeholder.py
apps/backend/src/ops_agent/infrastructure/queue/: __init__.py  contracts.py
apps/backend/src/ops_agent/infrastructure/storage/: __init__.py  local.py  protocols.py
apps/backend/src/ops_agent/security/: __init__.py  rbac.py
apps/backend/src/ops_agent/tasks/: __init__.py  case_processing.py
apps/backend/src/ops_agent/workflows/: __init__.py
apps/backend/tests/: README.md  conftest.py
apps/backend/tests/fixtures/: __init__.py  builders.py
apps/backend/tests/integration/: test_case_and_document_api.py  test_review_and_decision_api.py
apps/backend/tests/unit/: test_alembic_configuration.py  test_api_schemas.py  test_audit_routes.py  test_case_processing.py  test_case_routes.py  test_case_workflow.py  test_decision_routes.py  test_healthcheck.py  test_manual_review_routes.py  test_openai_extraction_provider.py  test_openapi_contract.py  test_orm_models.py  test_provider_placeholders.py  test_rbac.py  test_settings.py  test_upload_validation.py
(+321 files in other folders)
