[project]
name = "bank-document-processing-agent"
version = "0.1.0"
description = "Banking-grade document processing agent MVP — monorepo root (real package lives in apps/backend)."
requires-python = ">=3.13"

# NOTE: This root pyproject.toml is a workspace marker only.
# The actual backend package, dependencies, build config, and pytest config
# live in apps/backend/pyproject.toml. Run tests via:
#   cd apps/backend && pytest
