[project]
name = "ops-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the banking-grade document processing Ops Agent."
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
addopts = ["--strict-markers"]
markers = [
  "unit: fast isolated unit-level coverage",
  "integration: api and persistence coverage against the test application",
  "contract: openapi and interface compatibility checks",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["F", "B", "UP"]
ignore = ["B008"]
